<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              tools:context="com.palebluepagos.androidwallet.user.UserDataActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:textSize="25sp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"
        android:text="@string/enter_new_bank_title" />


    <LinearLayout
        android:background="@drawable/card_layout"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/banks_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/add_bank_aacount_bbva"
        android:visibility="gone"
        android:background="@drawable/card_layout"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:text="@string/username" />

            <EditText
                android:id="@+id/bbva_username_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:singleLine="true"
                android:maxLength="20"
                android:textSize="15sp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:text="@string/password" />

            <EditText
                android:id="@+id/bbva_password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:password="true"
                android:maxLength="8"
                android:singleLine="true"
                android:textSize="15sp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:text="@string/password_pagomiscuentas" />

            <EditText
                android:id="@+id/bbva_pin8_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:password="true"
                android:maxLength="8"
                android:singleLine="true"
                android:textSize="15sp"
                android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_bank_aacount_galicia"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:background="@drawable/card_layout"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:textSize="15sp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/black"
                android:text="@string/password" />

            <EditText
                android:id="@+id/galica_password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="4"
                android:singleLine="true"
                android:password="true"
                android:textSize="15sp"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/add_bank_aacount_done"
        android:onClick="addNewBank"
        android:visibility="gone"
        android:text="@string/add"
        android:background="@drawable/white_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="@color/app_main_color"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
