<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="300dp"
              android:layout_height="wrap_content"
              android:background="@drawable/card_layout"
              android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_gravity="left"
        android:text="@string/title_activity_charge"
        android:textColor="@color/white"
        android:background="@color/app_main_color"
        android:textSize="15sp"
        android:fontFamily="sans-serif-thin"
        android:textStyle="bold"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        >

        <TextView
            android:id="@+id/charge_desc"
            android:text="Alquiler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            />

        <TextView
            android:id="@+id/charge_amount"
            android:text="$1465.90"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:textStyle="bold"
            android:gravity="right"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/border_set"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        >

        <TextView
            android:id="@+id/charge_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            />

        <ImageView
            android:id="@+id/charge_status_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/border_set"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        >

        <TextView
            android:id="@+id/charge_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/border_set"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        >

        <TextView
            android:id="@+id/charge_destiny_bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/border_set"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_share"
            android:text="@string/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/app_main_color_dark"
            android:layout_marginRight="10dp"
            />

        <Button
            android:id="@+id/btn_close"
            android:text="@string/accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/app_main_color_dark"
            android:layout_marginRight="10dp"
            />


    </LinearLayout>

</LinearLayout>